k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app  # Ensure this namespace exists
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: gituser1/chatapp-frontend:latest
          ports: 
            - containerPort: 80
